[gd_scene load_steps=8 format=2]

[ext_resource path="res://common/UI/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://common/blackhole.png" type="Texture" id=2]
[ext_resource path="res://common/UI/fonts/SmallFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Screens/PanelContainer/CardBorder/Card.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 5
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.152941, 0.211765, 1 )
border_width_top = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.921569, 0.337255, 0.294118, 1 )

[node name="Card" type="Node2D"]
script = ExtResource( 4 )

[node name="CardBorder" type="PanelContainer" parent="."]
margin_left = -125.0
margin_top = -175.0
margin_right = 125.0
margin_bottom = 175.0
rect_min_size = Vector2( 250, 350 )
rect_pivot_offset = Vector2( 125, 175 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CardBorder"]
margin_left = 4.0
margin_top = 4.0
margin_right = 246.0
margin_bottom = 346.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CardArt" type="TextureRect" parent="CardBorder/VBoxContainer"]
margin_right = 242.0
margin_bottom = 214.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="TextPanel" type="PanelContainer" parent="CardBorder/VBoxContainer"]
margin_top = 214.0
margin_right = 242.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
size_flags_vertical = 9
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CardBorder/VBoxContainer/TextPanel"]
margin_top = 4.0
margin_right = 242.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/separation = 2

[node name="Label" type="Label" parent="CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 45.0
size_flags_vertical = 1
text = "Black Hole"
align = 1

[node name="HSeparator" type="HSeparator" parent="CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 47.0
margin_right = 242.0
margin_bottom = 51.0
mouse_filter = 2
custom_styles/separator = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 53.0
margin_right = 242.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Destroy all [color=red]Ships[/color]."
text = "Destroy all Ships."
fit_content_height = true
